--- a/Recipe-finder/styles.css
+++ b/Recipe-finder/styles.css
@@ -9,10 +9,11 @@ body{
 
 .head{
     display: inline-block;
-    width: 100%;
+    width: 98.5%;
     background-color: rgb(239, 220, 171);
     border: 1px solid black;
     padding: 10px;
+    margin-right: 10px;
 }
 
 .cards{
