--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,14 @@
 }
 
 body{
+    display: inline-block;
     background-color: rgb(242, 246, 208);
     font-size: 1rem;
 }
 
 .head{
     display: inline-block;
-    width: 98.5%;
+    width: 100%;
     background-color: rgb(239, 220, 171);
     border: 1px solid black;
     padding: 10px;
@@ -18,9 +19,10 @@ body{
 }
 
 .cards{
+    display: inline-block;
     border: 1px solid black;
     padding: 10px;
-    width: 45%;
+    width: 50%;
     border-radius: 10%; 
     background-color: rgb(217, 131, 36);
     margin: 10px;
@@ -31,17 +33,9 @@ body{
     height: 200px;
     width: 300px;
     border-radius: 10%;
-    float: both;
 }
 
-.left{
-    float: left;
-    clear: right;
-}
 
-.right{
-    float: right;
-}
 
 .pages{
     color: black;
@@ -60,6 +54,51 @@ body{
     text-transform: uppercase;
 }
 
+ol {
+  list-style-type: upper-roman; /* Applies to all ordered lists */
+}
+
 ol, p{
     font-family: 'Courier New', Courier, monospace;
+}
+
+@media(max-width: 1080px){
+    .tilte-img{
+        height: 300px;
+        width: 200px;
+        border-radius: 10%;
+        padding: 20;
+        float: both;
+    }
+
+    .logo{
+    width: 400px;
+    height: 400px;
+}
+
+    .head{
+    width: 98.5%;
+    background-color: rgb(239, 220, 171);
+    border: 1px solid black;
+    padding: 10px;
+    margin-right: 10px;
+    font-size: 4rem;
+}
+
+    .cards{
+        display: inline-block;
+        border: 1px solid black;
+        padding: 10px;
+        width: 90%;
+        height: 50%;
+        border-radius: 10%; 
+        background-color: rgb(217, 131, 36);
+        align-self: left;
+        font-size: 3.5rem;
+}
+
+    .items{
+        font-size: 4rem;
+    }
+
 }
